# home_task_7

./: Faker-23.2.1-py3-none-any.whl  create_db.py  fill_data.py  main.py  nnij_new.db  nnij_new.sql  nnij_new1.db  pyproject.toml  query1.sql  query10.sql  query2.sql  query3.sql  query4.sql  query5.sql  query6.sql  query7.sql  query8.sql  query9.sql  test.py  ДЗ7
NNIJ_BD/: alembic.ini  config.ini  connect_db.py  db.py  init.py  init_old.py  models.py  my_select..py  my_select.py  pyproject.toml  test.py
NNIJ_BD/alembic/: env.py
NNIJ_BD/alembic/versions/: 2c7186346c58_init.py  46b8e1668880_init.py  ba008de553e7_init.py  f854de44c405_init.py
NNIJ_BD/conf/: db.py  models.py  models_old.py
NNIJ_BD/migrations/: env.py
NNIJ_BD/seed/: init.py
NNIJ_BD/seeds/: init.py
activate/: pyvenv.cfg
activate/Scripts/: activate  activate.bat
cd/: pyvenv.cfg
cd/Scripts/: activate  activate.bat
