[tool.poetry]
name = "home-task-7"
version = "0.1.0"
description = "For HT7"
authors = ["VolodymyrRiz <v.v.rizun@gmail.com>"]
license = "MTM"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.27"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
