[tool.poetry]
name = "nnij_pg"
version = "0.1.0"
description = "BAse"
authors = ["VolodymyrRiz <v.v.rizun@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.13.1"
sqlalchemy = "^2.0.27"
faker = "^23.2.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
